code25_all/python/1041348.txt
import sys

number=int(sys.argv[1])

if number == 0
    fact=1
else
    fact=number
for (x=1; x<number; x++)
    fact*=x;             // mistake probably here

print fact

File "factorial.py", line 5
    if number == 0
                 ^
SyntaxError: invalid syntax

